--- a/index.html
+++ b/index.html
@@ -6,39 +6,38 @@
     <title>LinguaFix - Đăng Nhập</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* CSS cho wrapper */
         #wrapper {
-            min-height: 50vh; /* Chiều cao tối thiểu 100% viewport */
-            display: flex; /* Sử dụng flexbox */
-            justify-content: center; /* Canh giữa theo chiều ngang */
-            align-items: center; /* Canh giữa theo chiều dọc */
-            border-radius: 10px; /* Bo góc cho wrapper */
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Đổ bóng cho wrapper */
-            padding: 50px; /* Padding bên trong wrapper */
+            min-height: 50vh; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            border-radius: 10px; 
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); 
+            padding: 50px; 
         }
 
-        /* Tạo màu sáng cho phần "Chưa có tài khoản? Đăng ký" */
+        
         .login-container p {
-            color: #007BFF; /* Màu xanh sáng hơn */
+            color: #007BFF; 
             font-weight: bold;
         }
 
         .login-container p a {
-            color: #ff9800; /* Màu cam sáng hơn cho đường dẫn */
+            color: #ff9800; 
             text-decoration: none;
         }
 
         .login-container p a:hover {
-            text-decoration: underline; /* Hiệu ứng underline khi hover */
+            text-decoration: underline; 
         }
 
 
         .toggle-password {
             position: absolute;
-            right: 10px; /* Khoảng cách từ bên phải */
-            top: 50%; /* Canh giữa theo chiều dọc */
-            transform: translateY(-50%); /* Giảm chiều cao để hoàn toàn canh giữa */
-            cursor: pointer; /* Con trỏ biến thành tay khi hover */
+            right: 10px; 
+            top: 50%; 
+            transform: translateY(-50%); 
+            cursor: pointer; 
         }
 
         input[type="text"],
@@ -59,12 +58,12 @@
         <h2>Đăng Nhập</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Tên đăng nhập" required>
-            <br> <!-- Xuống dòng -->
+            <br>
             <div class="password-container">
                 <input type="password" id="password" placeholder="Mật khẩu" required>
-                <span class="toggle-password" onclick="togglePassword()">👁️</span> <!-- Biểu tượng con mắt -->
+                <span class="toggle-password" onclick="togglePassword()">👁️</span> 
             </div>
-            <br> <!-- Xuống dòng -->
+            <br>
             <button type="submit">Đăng Nhập</button>
             <p id="error" class="error"></p>
         </form>
