--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <br>
             <div class="password-container">
                 <input type="password" id="password" placeholder="Mật khẩu" required>
-                <span class="toggle-password" onclick="togglePassword()">👁️</span> 
+                <span class="toggle-password" onclick="togglePassword()">👁</span> 
             </div>
             <br>
             <button type="submit">Đăng Nhập</button>
