--- a/test.html
+++ b/test.html
@@ -140,7 +140,7 @@
    
     <div class="sidebar">
         <h2>Tài khoản của bạn</h2>
-        <p id="username">Tên đăng nhập: Chưa đăng nhập</p>
+        <p id="username">Tên đăng nhập:</p>
         <hr>
         <h3>Lịch sử chỉnh sửa</h3>
         <ul id="editHistory">
